--- a/src/main/webapp/blank2.html
+++ b/src/main/webapp/blank2.html
@@ -29,7 +29,7 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
 
-	<script src="js/logIn.js"></script>
+	<script src="js/signIn.js"></script>
 
 
 	<![endif]-->
