--- a/src/main/webapp/signIn.html
+++ b/src/main/webapp/signIn.html
@@ -29,7 +29,8 @@
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
 
 
-	<script src="js/logIn.js"></script>
+	<script src="js/user/userLogin.js"></script>
+	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 
 	<![endif]-->
@@ -213,7 +214,7 @@
 					</span>
 
 						<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-							<input class="input100" type="text" name="email" placeholder="Email">
+							<input class="input100" type="text" name="email" id="email" placeholder="Email">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -221,7 +222,7 @@
 						</div>
 
 						<div class="wrap-input100 validate-input" data-validate = "Password is required">
-							<input class="input100" type="password" name="pass" placeholder="Password">
+							<input class="input100" type="password" name="pass" id="password" placeholder="Password">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -229,10 +230,10 @@
 						</div>
 
 						<div class="container-login100-form-btn">
-							<button class="login100-form-btn">
-								Login
-							</button>
+							<input type="button" class="login100-form-btn" value="LOGIN" onclick="signInControl()">
+
 						</div>
+						<p style="color:red;" id="response"></p>
 
 						<div class="text-center p-t-12">
 						<span class="txt1">
