--- a/src/main/webapp/signIn.html
+++ b/src/main/webapp/signIn.html
@@ -243,7 +243,7 @@
 								Username / Password?
 							</a>
 							<br>
-							<a class="txt2" href="#">
+							<a class="txt2" href="register.html">
 								Create your Account
 								<i class="fa fa-long-arrow-right m-l-5" aria-hidden="true"></i>
 							</a>
