--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -12,6 +12,7 @@
 
 	<!-- Bootstrap -->
 	<link type="text/css" rel="stylesheet" href="css/bootstrap.min.css"/>
+	<script src='https://kit.fontawesome.com/a076d05399.js'></script>
 
 	<!-- Slick -->
 	<link type="text/css" rel="stylesheet" href="css/slick.css"/>
@@ -212,40 +213,62 @@
 						Member Register
 					</span>
 						<div class="wrap-input100 validate-input">
-							<input class="input100" type="text" name="fullname" placeholder="Full Name">
+							<input class="input100" type="text" required name="firstname" id="name" placeholder="Emri">
+							<span class="focus-input100"></span>
+							<span class="symbol-input100">
+							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
+						</span>
+						</div>
+						<div class="wrap-input100 validate-input">
+							<input class="input100" type="text" required name="lastname" id="surname" placeholder="Mbiemri">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-user-circle-o" aria-hidden="true"></i>
 						</span>
 						</div>
 						<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-							<input class="input100" type="text" name="email" placeholder="Email">
+							<input class="input100" type="email" name="email" id="email" required placeholder="Email">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
 						</span>
 						</div>
 						<div class="wrap-input100 validate-input" data-validate = "Password is required">
-							<input class="input100" type="password" name="pass" placeholder="Password">
+							<input class="input100" type="password" name="pass" id="password" required placeholder="Fjalekalimi">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 						</div>
 						<div class="wrap-input100 validate-input" data-validate = "Password is required">
-							<input class="input100" type="password" name="confirmpass" placeholder="ConfirmPassword">
+							<input class="input100" type="password" id="confirmpass" name="confirmpass" required placeholder="Konfirmo Fjalekalimin">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
 						</span>
 						</div>
+						<div class="wrap-input100 validate-input">
+							<input class="input100" type="text" id="adress" name="adress" required placeholder="Adresa">
+							<span class="focus-input100"></span>
+							<span class="symbol-input100">
+							<i class="fas fa-map-marked-alt"></i>
+						</span>
+						</div>
+						<div class="wrap-input100 validate-input">
+							<input class="input100" type="text" id="postalcode" name="postalcode" required placeholder="Kodi Postar">
+							<span class="focus-input100"></span>
+							<span class="symbol-input100">
+							<i class="fa fa-location-arrow"></i>
+						</span>
+						</div>
 
 						<div class="container-login100-form-btn">
-							<button class="login100-form-btn">
-								Register
-							</button>
+							<input type="button" value="Register" onclick="userSignUp()" class="login100-form-btn">
+
+							<p id="response_data" style="color: red"></p>
 						</div>
 					</form>
+			</div>
 				</div>
 
 
@@ -362,6 +385,7 @@
 <script src="js/nouislider.min.js"></script>
 <script src="js/jquery.zoom.min.js"></script>
 <script src="js/main.js"></script>
+<script src="js/user/userSignUp.js"></script>
 
 </body>
 </html>
