--- a/src/main/webapp/signIn.html
+++ b/src/main/webapp/signIn.html
@@ -27,13 +27,12 @@
 
 	<!-- Custom stlylesheet -->
 	<link type="text/css" rel="stylesheet" href="css/style.css"/>
-
+	<link type="text/css" rel="stylesheet" href="css/spinerLoading.js.css"/>
 
 	<script src="js/user/userLogin.js"></script>
 	<script src="https://kit.fontawesome.com/a076d05399.js"></script>
 
 
-	<![endif]-->
 
 </head>
 <body>
@@ -44,7 +43,7 @@
 		<div class="container">
 			<ul class="header-links pull-left">
 				<li><a href="#"><i class="fa fa-phone"></i> +021-95-51-84</a></li>
-				<li><a href="#"><i class="fa fa-envelope-o"></i> email@email.com</a></li>
+				<li><a href="#"><i class="fa fa-envelope-o"></i> Dyqanexpress@gmail.com</a></li>
 				<li><a href="#"><i class="fa fa-map-marker"></i> 1734 Stonecoal Road</a></li>
 			</ul>
 			<ul class="header-links pull-right">
@@ -90,58 +89,6 @@
 				<!-- ACCOUNT -->
 				<div class="col-md-3 clearfix">
 					<div class="header-ctn">
-						<!-- Wishlist -->
-						<div>
-							<a href="#">
-								<i class="fa fa-heart-o"></i>
-								<span>Your Wishlist</span>
-								<div class="qty">2</div>
-							</a>
-						</div>
-						<!-- /Wishlist -->
-
-						<!-- Cart -->
-						<div class="dropdown">
-							<a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-								<i class="fa fa-shopping-cart"></i>
-								<span>Your Cart</span>
-								<div class="qty">3</div>
-							</a>
-							<div class="cart-dropdown">
-								<div class="cart-list">
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="img/product01.png" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name"><a href="#">product name goes here</a></h3>
-											<h4 class="product-price"><span class="qty">1x</span>$980.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
-									</div>
-
-									<div class="product-widget">
-										<div class="product-img">
-											<img src="img/product02.png" alt="">
-										</div>
-										<div class="product-body">
-											<h3 class="product-name"><a href="#">product name goes here</a></h3>
-											<h4 class="product-price"><span class="qty">3x</span>$980.00</h4>
-										</div>
-										<button class="delete"><i class="fa fa-close"></i></button>
-									</div>
-								</div>
-								<div class="cart-summary">
-									<small>3 Item(s) selected</small>
-									<h5>SUBTOTAL: $2940.00</h5>
-								</div>
-								<div class="cart-btns">
-									<a href="#">View Cart</a>
-									<a href="#">Checkout  <i class="fa fa-arrow-circle-right"></i></a>
-								</div>
-							</div>
-						</div>
-						<!-- /Cart -->
 
 						<!-- Menu Toogle -->
 						<div class="menu-toggle">
@@ -163,29 +110,7 @@
 </header>
 <!-- /HEADER -->
 
-<!-- NAVIGATION -->
-<nav id="navigation">
-	<!-- container -->
-	<div class="container">
-		<!-- responsive-nav -->
-		<div id="responsive-nav">
-			<!-- NAV -->
-			<ul class="main-nav nav navbar-nav">
-				<li class="active"><a href="#">Home</a></li>
-				<li><a href="#">Hot Deals</a></li>
-				<li><a href="#">Categories</a></li>
-				<li><a href="#">Laptops</a></li>
-				<li><a href="#">Smartphones</a></li>
-				<li><a href="#">Cameras</a></li>
-				<li><a href="#">Accessories</a></li>
-			</ul>
-			<!-- /NAV -->
-		</div>
-		<!-- /responsive-nav -->
-	</div>
-	<!-- /container -->
-</nav>
-<!-- /NAVIGATION -->
+
 
 <!-- BREADCRUMB -->
 
@@ -214,7 +139,7 @@
 					</span>
 
 						<div class="wrap-input100 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-							<input class="input100" type="text" name="email" id="email" placeholder="Email">
+							<input class="input100" type="text" name="email" id="email" required placeholder="Email">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-envelope" aria-hidden="true"></i>
@@ -222,7 +147,7 @@
 						</div>
 
 						<div class="wrap-input100 validate-input" data-validate = "Password is required">
-							<input class="input100" type="password" name="pass" id="password" placeholder="Password">
+							<input class="input100" type="password" name="pass" id="password" required placeholder="Password">
 							<span class="focus-input100"></span>
 							<span class="symbol-input100">
 							<i class="fa fa-lock" aria-hidden="true"></i>
@@ -230,15 +155,15 @@
 						</div>
 
 						<div class="container-login100-form-btn">
-							<input type="button" class="login100-form-btn" value="LOGIN" onclick="signInControl()">
-
+							<input type="button" id="signin" class="login100-form-btn" value="LOGIN" onclick="signInControl()">
+							<div class="loader" style = "display:none; margin-top: 20px" id="spinnerLoading"></div>
 						</div>
 						<p style="color:red;" id="response"></p>
 
 						<div class="text-center p-t-12">
 						<span class="txt1">
 							Forgot
-						</span>
+						</span><!-- NAVIGATION -->
 							<a class="txt2" href="#">
 								Username / Password?
 							</a>
@@ -273,7 +198,7 @@
 						<ul class="footer-links">
 							<li><a href="#"><i class="fa fa-map-marker"></i>1734 Stonecoal Road</a></li>
 							<li><a href="#"><i class="fa fa-phone"></i>+021-95-51-84</a></li>
-							<li><a href="#"><i class="fa fa-envelope-o"></i>email@email.com</a></li>
+							<li><a href="#"><i class="fa fa-envelope-o"></i>Dyqanexpress@gmail.com</a></li>
 						</ul>
 					</div>
 				</div>
